# openarm_camera_picknplace

./: .gitignore  README.md
src/openarm_perception_control/: CMakeLists.txt  package.xml
src/openarm_perception_control/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  openarm_right_arm.srdf  ros2_controllers.yaml  scan_pose.yaml
src/openarm_perception_control/include/openarm_perception_control/: control_node.hpp  multi_rate_servo_node.hpp
src/openarm_perception_control/launch/: servo_pipeline.launch.py
src/openarm_perception_control/src/: control_node.cpp  main.cpp  multi_rate_servo_node.cpp
src/openarm_perception_control/test/: test_pick_object.py
src/openarm_perception_msgs/: CMakeLists.txt  package.xml
src/openarm_perception_msgs/srv/: PickObject.srv  SegmentObject.srv
src/openarm_sam_perception/: package.xml  requirements.txt  setup.cfg  setup.py
src/openarm_sam_perception/openarm_sam_perception/: sam_perception_node.py
